; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-snap-persistent.c_clear_exception.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-snap-persistent.c_clear_exception.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pstore = type { i32 }
%struct.disk_exception = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pstore*, i32)* @clear_exception to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_exception(%struct.pstore* %0, i32 %1) #0 {
  %3 = alloca %struct.pstore*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.disk_exception*, align 8
  store %struct.pstore* %0, %struct.pstore** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.pstore*, %struct.pstore** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call %struct.disk_exception* @get_exception(%struct.pstore* %6, i32 %7)
  store %struct.disk_exception* %8, %struct.disk_exception** %5, align 8
  %9 = load %struct.disk_exception*, %struct.disk_exception** %5, align 8
  %10 = getelementptr inbounds %struct.disk_exception, %struct.disk_exception* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.disk_exception*, %struct.disk_exception** %5, align 8
  %12 = getelementptr inbounds %struct.disk_exception, %struct.disk_exception* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  ret void
}

declare dso_local %struct.disk_exception* @get_exception(%struct.pstore*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
